--- a/prjNightMarket/Views/Shared/_Layout.cshtml
+++ b/prjNightMarket/Views/Shared/_Layout.cshtml
@@ -17,10 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("台中各大夜市資訊", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("台中各大夜市資訊", "Index", "NightMarket", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="#">註冊</a></li>
+                    <li>
+                        @Html.ActionLink("登入","Create","Member")
+                    </li>
+                    <li><a href="#">產品查詢</a></li>
+                    <li><a href="#">購物車</a></li>
+
                 </ul>
             </div>
         </div>
