update nightmarket typography

--- a/prjNightMarket/Views/NightMarket/Index.cshtml
+++ b/prjNightMarket/Views/NightMarket/Index.cshtml
@@ -11,45 +11,29 @@
 <link href="~/Content/PagedList.css" rel="stylesheet" />
 
 <h2>台中各大夜市</h2>
-
-
 <p>
     @Html.ActionLink("請登入","Create","Member")如果您沒有帳戶
 </p>
+<div class="row">
+    @foreach(var item in Model)
+    {
+        string imgsrc = @item.Id + ".jpg";
+        <div class="col-lg-4">
+            <div class="thumbnail">
+                <img src="~/images/@imgsrc" style="width:100%;height:300px" />
+                <div class="caption">
+                    <h2>@item.Name</h2>
+                    <p>@item.Address</p>
+                    <p><a href="https://www.google.com.tw/maps/place/@item.Address" class="btn btn-success">google 地圖</a></p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
-<table class="table table-bordered table-hover">
-    <tr>
-        <th>編號</th>
-        <th>名稱</th>
-        <th>地址</th>
-        <th>圖片</th>
-        <th>google地圖</th>
-    </tr>
 
-@foreach (var item in Model) {
-    string imgSrc = @item.Id + ".jpg";
-    <tr>
-        <td>
-            @item.Id
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-           @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            <img src="~/images/@imgSrc" width="200" />
-        </td>
-        <td>
-            <a href="https://www.google.com.tw/maps/place/@item.Address"
-                class="btn btn-info">
-                google地圖
-            </a>
-        </td>
-    </tr>
-}
-</table>
+
+
 
 @*第一個參數是指定要顯示的Model，第二個參數是指定要連結的動作方法和頁次*@
 @Html.PagedListPager(Model,page => Url.Action("Index",new { page }))
