--- a/prjNightMarket/Views/Member/Create.cshtml
+++ b/prjNightMarket/Views/Member/Create.cshtml
@@ -8,19 +8,19 @@
 @using(Html.BeginForm())
 {
     <p>
-        帳號：@Html.TextBoxFor(model => model.UserId, new {@class="form-control"})
+        帳號：@Html.TextBoxFor(model => model.UserId, new {@class="form-control",required="required"})
     </p>
     <p>
-        密碼：@Html.TextBoxFor(model => model.Pwd, new { @class = "form-control" })
+        密碼：@Html.TextBoxFor(model => model.Pwd, new { @class = "form-control", required = "required" })
     </p>
     <p>
-        姓名：@Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+        姓名：@Html.TextBoxFor(model => model.Name, new { @class = "form-control", required = "required" })
     </p>
     <p>
-        信箱：@Html.TextBoxFor(model => model.Email, new { @class = "form-control" , type="email"})
+        信箱：@Html.TextBoxFor(model => model.Email, new { @class = "form-control" , type="email", required = "required" })
     </p>
     <p>
-        生日：@Html.TextBoxFor(model => model.BirthDay, new { @class = "form-control", type = "date" })
+        生日：@Html.TextBoxFor(model => model.BirthDay, new { @class = "form-control", type = "date", required = "required" })
     </p>
     <p>
         <input type="submit" value="註冊" class="btn btn-success" />
