student score system

--- a/prjNightMarket/Views/NightMarket/Index.cshtml
+++ b/prjNightMarket/Views/NightMarket/Index.cshtml
@@ -5,7 +5,7 @@
 @model IPagedList<prjNightMarket.Models.NightMarket>
 
 @{
-    ViewBag.Title = "台中各大夜市";
+    ViewBag.Title = "台中各大夜市資訊";
 }
 @*引用PagedList套件的樣式檔，負責分頁的按鈕排版和樣式，安裝套件時，會自動新增至Conent資料夾下*@
 <link href="~/Content/PagedList.css" rel="stylesheet" />
