--- a/prjNightMarket/Views/Shared/_Layout.cshtml
+++ b/prjNightMarket/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 台中各大夜市資訊</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -27,7 +27,9 @@
                     </li>
                     <li><a href="#">產品查詢</a></li>
                     <li><a href="#">購物車</a></li>
-
+                    <li>
+                        @Html.ActionLink("學生列表練習","Index","Student")
+                    </li>
                 </ul>
             </div>
         </div>
@@ -36,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - 台中各大夜市資訊</p>
+            <p>&copy; @DateTime.Now.Year - @ViewBag.Title</p>
         </footer>
     </div>
 
